# ircsp

./: AUTHORS  Makefile.am  README.md  TODO  UWCommandList  autogen.sh  build.sh  clean.sh  configure.ac  count.sh  debug.h  version.sh
conf/: Makefile.am  ircsp.conf  ircsp.conf-prd
data/: Makefile.am
data/empty/: Makefile.am
docs/mysql/: exempt.table  nickserv.table  nickserv_access.table  services_admin.table
include/: alloc.h  channels.h  cmds.h  conf.h  conf.h.fuck  ircsp.h  log.h  match.h  misc.h  modules.h  mysql.h  rehash.h  scheduler.h  servers.h  signals.h  socket.h  synch.h  text.h  users.h  users.h-orig  uworld-orig.h  version.h
logs/: Makefile.am
modules/: Makefile.am
modules/protocol/: Makefile.am
modules/protocol/bahamut/: Makefile.am  libbahamut.c
modules/protocol/undernet/include/: libundernet.h  libundernet_cmds.h  libundernet_introdouce.h  libundernet_m_burst.h  libundernet_m_create.h  libundernet_m_destruct.h  libundernet_m_eob.h  libundernet_m_info.h  libundernet_m_join.h  libundernet_m_kill.h  libundernet_m_mode.h  libundernet_m_nick.h  libundernet_m_part.h  libundernet_m_ping.h  libundernet_m_privmsg.h  libundernet_m_quit.h  libundernet_m_server.h  libundernet_m_squit.h  libundernet_m_stats.h  libundernet_m_version.h  libundernet_parser.h
modules/protocol/undernet/source/: Makefile.am  libundernet.c  libundernet_cmds.c  libundernet_cmds.c-orig  libundernet_introdouce.c  libundernet_m_burst.c  libundernet_m_burst.c.orig  libundernet_m_create.c  libundernet_m_destruct.c  libundernet_m_eob.c  libundernet_m_info.c  libundernet_m_join.c  libundernet_m_kill.c  libundernet_m_mode.c  libundernet_m_motd.c  libundernet_m_nick.c  libundernet_m_nick.c.orig  libundernet_m_part.c  libundernet_m_ping.c  libundernet_m_privmsg.c  libundernet_m_quit.c  libundernet_m_server.c  libundernet_m_squit.c  libundernet_m_stats.c  libundernet_m_version.c  libundernet_parser.c
modules/services/: Makefile.am
modules/services/chanserv/include/: libchanserv.h
modules/services/chanserv/source/: Makefile.am  libchanserv.c
modules/services/helpserv/include/: libhelpserv.h
modules/services/helpserv/source/: Makefile.am  libhelpserv.c
modules/services/memoserv/include/: libmemoserv.h
modules/services/memoserv/source/: Makefile.am  libmemoserv.c
modules/services/nickserv/include/: libnickserv.h  libnickserv_admin.h  libnickserv_commands.h  libnickserv_database.h  libnickserv_misc.h  libnickserv_nickinfo.h
modules/services/nickserv/source/: Makefile.am  libnickserv.c  libnickserv_admin.c  libnickserv_commands.c  libnickserv_database.c  libnickserv_misc.c  libnickserv_nickinfo.c
modules/services/operserv/include/: liboperserv.h
modules/services/operserv/source/: Makefile.am  liboperserv.c
source/: Makefile.am  alloc.c  channels.c  cmds.c  conf.c  ircsp.c  log.c  match.c  misc.c  modules.c  mysql.c  rehash.c  scheduler.c  servers.c  signals.c  socket.c  strings.c  synch.c  users.c  uworld-orig.c  version.c
tools/: Makefile.am
tools/mkpasswd/: Makefile.am  mkpasswd.c
var/: Makefile.am
var/helpfiles/: Makefile.am
var/helpfiles/nickserv/: Makefile.am  drop  identify  index  recover  register  release  set  set.kill  set.password
var/helpfiles/operserv/: Makefile.am  help  index  operlist  version
var/helpfiles/uworld/: Makefile.am  auth  gline  index  remgline  uptime
